# rustikal

./: Cargo.toml  LICENSE  README.md  build.rs
resources/: resources.gresource.xml  window.ui
src/: main.rs
