[package]
name = "rustikal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.2", package = "libadwaita", features = ["v1_2"] }
gtk4 = { version = "0.7.1", features = ["v4_10"] }

[build-dependencies]
glib-build-tools = "0.18.0"
